# PAPERY

./: .gitignore  LICENSE  README.md  package-lock.json
backend/: .gitignore  Dockerfile  Dockerfile.server  Dockerfile.worker  LICENSE.md  README.md  docker-compose.yml  docker-entrypoint.server.sh  docker-entrypoint.sh  pyproject.toml  run.bat  setup.bat
backend/app/: main.py
backend/app/repositories/: base.py  base2.py  items.py  tokens.py  user2.py  users.py
backend/app/services/: auths.py  items.py  users.py  verify.py
backend/scripts/: setup.bat
backend/src/: .env.docker  .env.example
backend/src/app/: main.py
backend/src/app/api/: dependencies.py  router.py
backend/src/app/api/v1/: __init__.py  auth.py  chat_messages.py  chat_sessions.py  documents.py  login.py  logout.py  posts.py  project.py  projects.py  rate_limits.py  register.py  tasks.py  tiers.py  users.py  utils.py
backend/src/app/core/: config.py  logger.py  schemas.py  security.py  setup.py
backend/src/app/core/db/: __init__.py  database.py  minio.py  models.py  redis.py  token_blacklist.py
backend/src/app/core/locales/: en.json
backend/src/app/core/utils/: minio.py  queue.py  rate_limit.py  redis.py  redis_storage.py
backend/src/app/core/worker/: functions.py  settings.py
backend/src/app/crud/: access_controls.py  crud_chat_message.py  crud_chat_session.py  crud_document.py  crud_documents.py  crud_posts.py  crud_projects.py  crud_rate_limit.py  crud_rate_limits.py  crud_tier.py  crud_tiers.py  crud_users.py
backend/src/app/middleware/: client_cache_middleware.py  error_middleware.py
backend/src/app/models/: __init__.py  access_control.py  chat_message.py  chat_session.py  document.py  message_document.py  post.py  project.py  rate_limit.py  tier.py  user.py
backend/src/app/schemas/: access_control.py  auth.py  chat_message.py  chat_session.py  document.py  job.py  post.py  project.py  rate_limit.py  tier.py  user.py  utils.py
backend/src/migrations/: README  env.py
backend/src/migrations/versions/: 08ba940af901_create_initial_tables.py  0a376c8e4964_create_initial_tables.py  1b5ada99e473_create_initial_tables.py  91cf26b4fe1a_create_initial_tables.py  9df1db8cbe99_create_initial_tables.py  b1453e238de0_create_initial_tables.py  b882e81c7df6_add_initial_tiers.py  bd7553a9a2fb_add_first_super_user.py  be82e81c7df6_add_initial_tiers.py  c7de3d77bdaf_1_create_init_table.py  cd7553a9a2fb_2_add_first_super_user.py  cd7553a9a2fb_add_first_super_user_initialization.py  fdc2a713c5b7_create_initial_tables.py
backend/src/scripts/: create_first_superuser.py
backend/tests/: test_user.py
frontend/: .env.development  .env.development.exmaple  .env.production  (+11 more)
(+207 files in other folders)
