[tool.poetry]
name = "PAPERY"
version = "0.1.0"
description = "PAPERY is an open-source project aimed at researching and analyzing scientific papers. It allows users to input research data and papers, from which it generates and runs code to produce results."
authors = ["Toricat <haminhquan12c7@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.0"
pydantic = { extras = ["email"], version = "^2.6.1" }
fastapi = "^0.115.4"
uvicorn = "^0.32.0"

httptools = "^0.6.1"
pydantic-core= "^2.26.0"
uuid = "^1.30"
alembic = "^1.13.1"
asyncpg = "^ 0.30.0"
SQLAlchemy-Utils = "^0.41.1"
python-jose = "^3.3.0"
SQLAlchemy = "^2.0.25"
pytest = "^8.3.3"
python-multipart = "^0.0.17"
uvloop = { version = "^0.19.0", platform = "linux|darwin" }
httpx = "^0.27.2"
pydantic-settings = "^2.0.3"
redis = "^5.0.1"
arq = "^0.26.1"
gunicorn = { version = "^23.0.0", platform = "linux|darwin" }
bcrypt = "^4.1.1"
fastcrud = "^0.15.1"
faker = "^30.8.2"
psycopg2-binary = "^2.9.9"
pytest-mock = "^3.14.0"
torch = {version = "^2.5.1+cu124", source = "pytorch-gpu"}
torchvision = {version = "^0.20.1+cu124", source = "pytorch-gpu"}
torchaudio = {version = "^2.5.1+cu124", source = "pytorch-gpu"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 120
fix = true
select = [
    # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "F", # Pyflakes
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E", # pycodestyle
    "W", # Warning
    # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "C", # Complexity (mccabe+) & comprehensions
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP", # pyupgrade
    # https://docs.astral.sh/ruff/rules/#isort-i
    "I", # isort
]
ignore = [
    # https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "E402", # module level import not at top of file
    # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "UP006", # use-pep585-annotation
    "UP007", # use-pep604-annotation
    "E741",  # Ambiguous variable name
    # "UP035", # deprecated-assertion
]
[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401", # unused import
    "F403", # star imports
]

[tool.ruff.mccabe]
max-complexity = 24

[tool.ruff.pydocstyle]
convention = "numpy"
